add threaddump endpoint
